<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.qqonline.mpf.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ActiActivity_name"/>
    <item
        android:id="@+id/action_clock"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_time"/>
     <item
        android:id="@+id/action_weather"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_weather"/>
    <item
        android:id="@+id/action_reconnect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ActiActivity_ReConnect_name"/>
    <item
        android:id="@+id/action_pptplay"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ActiActivity_PlayAll_name"/>
    
    
</menu>
