<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/tvContent"
        android:textSize="25sp"
        android:text="@string/default_delete_dialog_content"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:id="@+id/btnCancle"

            android:text="@string/Cancle"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:id="@+id/btnDelete"
            android:text="@string/delete"
            />
    </LinearLayout>
</LinearLayout>