<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ActiActivity_Code_Text"
            android:textSize="17sp"
             />

        <TextView
            android:id="@+id/tv_setting_activity_registerinfo_serialscode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/none"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="17sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ActiActivity_BindingPassword_Text"
            android:textSize="17sp"
            />

        <EditText
            android:id="@+id/tv_setting_activity_registerinfo_bindingcode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/none"
            android:textSize="17sp"
            />
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_setting_activity_registerinfo_bindingcode_change"
            android:text="修改"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:background="@android:color/background_light"/>
    </LinearLayout>

</LinearLayout>